added hospital icons and linked font-awesome

--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -12,7 +12,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+  <script src="https://kit.fontawesome.com/f8b62a635e.js" crossorigin="anonymous"></script>
 
   <div class="container" style="margin-top:3%;width:30%;font-family:sans-serif;">
     <div class="row">
@@ -25,10 +25,10 @@
       <br>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="" style="background-color:black;" class="btn btn-lg btn-info btn-block">Vaccination Centres </a>         
+          <a href="" style="background-color:black;" class="btn btn-lg btn-info btn-block"><i style="color:white;font-size:36px" class='fas fa-hospital-alt'></i><br>Vaccination Centres </a>         
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a  href="{% url 'login' %}" style="background-color:#696969;" class="btn btn-lg btn-primary btn-block">Patient</a>
+          <a  href="{% url 'login' %}" style="background-color:#696969;" class="btn btn-lg btn-primary btn-block"><i style="color:white;font-size:36px" class="fas fa-hospital-user"></i><br>Patient</a>
         </div>
       </div>
       <div class="login-or">
