--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -56,6 +56,7 @@
             Log In
           </button>
         </form>
+        {{messages.info}}
       </div>
       <div>
         <h3>Not yet Registered?</h3>
