edited vc_register.html page

--- a/C19V/templates/vc_register.html
+++ b/C19V/templates/vc_register.html
@@ -73,6 +73,7 @@
               </tbody>
             </table>
         </form>
+        {{form.errors}}
       </div>
       <div>
       <h3>Already have an account?</h3>
