fixed centre field in patient model

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -85,7 +85,7 @@
             <h6 class="mb-0 pl-4">Vaccination Centre</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            {{ person.centre.name }}
+            {{ person.centre }}
           </div>
         </div>
         <hr>
