--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -8,8 +8,7 @@
     <h2 style="text-align:center;">Add a Vaccinated Person</h2><br><br>
     <form action="" method="POST">
         {% csrf_token %}
-        
-   
+
     <table class="table table-dark table-hover">
         <tbody>
             <tr>
@@ -40,7 +39,7 @@
             <div style="display: none;">
                 <label for="centre"><b>Vaccination Centre -</b> </label>
                 {{ form.centre }}<br><br>
-                <label for="centre"><b>User -</b> </label>
+                <label for="user"><b>User -</b> </label>
                 {{ form.user }}<br><br>
             </div>
         </tbody>
