added update option for patients

--- a/C19V/static/css/vc_report.css
+++ b/C19V/static/css/vc_report.css
@@ -2,6 +2,10 @@ body {
     background-color: #eff0f1;
 }
 
+td,th{
+    text-align: center;
+}
+
 #total-vaccinations {
     height: 200px;
     margin-top: 50px;
