--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -5,7 +5,7 @@
 
 <div class="container">
     <br>
-    <h2 style="text-align:center;">Add a Vaccinated Person</h2><br><br>
+    <h2 style="text-align:center;">{% if update %}Update a Vaccinated Person{% else %} Add a Vaccinated Person{% endif %}</h2><br><br>
     <form action="" method="POST">
         {% csrf_token %}
 
@@ -44,6 +44,7 @@
             </div>
         </tbody>
     </table>
+    {{forms.errors}}
     <br>
     <input style=" background-color: #242526;
       border: none;
