--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -27,7 +27,7 @@
       <br>
       <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="#" style="background-color:black;" class="btn btn-lg btn-primary btn-block"><i style="color:white;font-size:36px" class='fas fa-hospital-alt'></i><br>Patient</a>
+          <a href="#" style="background-color:black;" class="btn btn-lg btn-primary btn-block"><i style="color:white;font-size:36px" class='fas fa-hospital-user'></i><br>Patient</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
           <a href="{% url 'loginvc' %}" style="background-color:#696969;" class="btn btn-lg btn-primary btn-block"><i style="color:white;font-size:36px" class='fas fa-hospital-alt'></i><br>Vaccination Centres</a>
