--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -8,8 +8,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="{% static '/css/faq.css' %}">
-<script src="{% static '/js/faq.js' %}" ></script><br>
-<center><h2>Frequently Asked Questions</h2></center><br>
+<script src="{% static '/js/faq.js' %}" ></script>
+<br>
+<center><h2>Frequently Asked Questions</h2></center>
+<br>
 
 <div class="faqs-container" itemscope itemtype="https://schema.org/FAQPage" >
     
@@ -27,10 +29,10 @@
         </div>
     </div>
     {% endfor %}
-
-    {% if block=='VC' %}
-    </div><br><div style="text-align: center;"><button type="button" class="btn btn-dark"><b>Add Faq</b></button></div>
-    {% endif %}
-</div>
+</div>   
+<br>
+{% if block=='VC' %}    
+    <div style="text-align: center;"><button type="button" class="btn btn-dark"><b>Add Faq</b></button></div>
+{% endif %}
 
 {% endblock %}
