--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{% static '/css/faq.css' %}">
 <script src="{% static '/js/faq.js' %}" ></script>
 <br>
-<center><h2 id="head">Frequently Asked Questions</h2></center>
+<center><h2 id="header">Frequently Asked Questions</h2></center>
 <br>
 <div class="faqs-container" itemscope itemtype="https://schema.org/FAQPage" >
     {% for faq in faqs %}
