--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -28,13 +28,15 @@
                 </button>
                 <div>
                     <p>Are you sure you want to delete this FAQ?</p>
-                    <p>{{item.question}}</p>
-                    
+                    <p>{{faq.question}}</p>
                     <form action='' method='POST'>
                         {% csrf_token %}
                         <button>Cancel</button>
                         <input type="submit" value='Yes'>
-                        <input type="text" name="id" value="{{item.id}}" style="">
+                        <div style="display: none;" >
+                            <label for='id'>Id</label>
+                            <input type="text" name="id" value={{faq.id}}>
+                        </div>
                     </form>
                 </div>
                 {% endif %}
