--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -30,23 +30,18 @@
                     <b>Delete Faq</b>
                 </button>
                 <div class="form-popup" id="myForm" style="margin-right: 38%;margin-bottom:20%;border-style: double;background-color: black;color:aliceblue;border-radius:5px;"><br>
-                   
-                        <p style="font-weight: bold;">&nbsp;&nbsp; Are you sure you want to delete this FAQ?&nbsp;&nbsp;</p>
-                        <p>&nbsp;&nbsp;&nbsp;{{faq.question}}</p>
-                        <form action='' method='POST'>
-                            {% csrf_token %}
-                            <button class="btn btn-dark" style="margin-left: 10%;width:30%"><b>Cancel</b></button>
-                            <input type="submit" value='Delete' class="btn btn-dark;" style="background-color:#343a40;font-weight: bold;color:white;margin-left: 18%;width:30%">
-                            <div style="display: none;">
-                                <label for='id'>Id</label>
-                                <input type="text" name="id" value={{faq.id}}>
-                            </div>
-                        </form><br>
-                   
-                    
+                    <p style="font-weight: bold;">&nbsp;&nbsp; Are you sure you want to delete this FAQ?&nbsp;&nbsp;</p>
+                    <p>&nbsp;&nbsp;&nbsp;{{faq.question}}</p>
+                    <form action='' method='POST'>
+                        {% csrf_token %}
+                        <input type="submit" value='Delete' class="btn btn-dark;" style="background-color:#343a40;font-weight: bold;color:white;margin-left: 18%;width:30%">
+                        <div style="display: none;">
+                            <label for='id'>Id</label>
+                            <input type="text" name="id" value={{faq.id}}>
+                        </div>
+                        <button class="btn btn-dark" onclick="closeForm()" style="margin-left: 10%;width:30%"><b>Cancel</b></button>
+                    </form><br>
                 </div>
-               
-                
                 {% endif %}
             </div>
         </div>
@@ -56,18 +51,17 @@
 <br>
 {% if User == 'VC' %}
 <div style="text-align: center;"><button type="button" class="btn btn-dark">
-        <a href="{% url 'add_faq' person.id %}" class="text-info"><b>Add Faq</b></a>
-    </button></div>
+    <a href="{% url 'add_faq' person.id %}" class="text-info"><b>Add Faq</b></a>
+</button></div>
+<script>
+    function openForm() {
+        document.getElementById("myForm").style.display = "block";
+    }
 
-    <script>
-        function openForm() {
-            document.getElementById("myForm").style.display = "block";
-        }
-
-        function closeForm() {
-            document.getElementById("myForm").style.display = "none";
-        }
-    </script>
+    function closeForm() {
+        document.getElementById("myForm").style.display = "none";
+    }
+</script>
 {% endif %}
 
 
