--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -62,6 +62,12 @@
         document.getElementById("myForm").style.display = "none";
     }
 </script>
+{%  else  %}
+<div class="pl-4" >
+    <h3>For any Further Information Contact {{centre.name}} </h3>
+    <h5> Phone Number : {{centre.phone_no}} </h5>
+    <h5> Email Address : {{centre.email}} </h5>
+</div>
 {% endif %}
 
 
