--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -6,6 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://kit.fontawesome.com/f8b62a635e.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" type="text/css" href="{% static '/css/faq.css' %}">
 <script src="{% static '/js/faq.js' %}"></script>
@@ -29,18 +30,24 @@
                     style="float:right;margin-right: 1%;margin-top:1%;" onclick="openForm()">
                     <b>Delete Faq</b>
                 </button>
-                <div class="form-popup" id="myForm" style="margin-right: 38%;margin-bottom:20%;border-style: double;background-color: black;color:aliceblue;border-radius:5px;"><br>
+                <div class="form-popup" id="myForm" style="margin-right: 38%;margin-bottom:20%;border-style: double;background-color: black;color:aliceblue;border-radius:5px;"><i class="fas fa-times" onclick="closeForm()" style="position: absolute;margin-top:1%;margin-right: 1%;
+                 right:0px;"></i><br>
                     <p style="font-weight: bold;">&nbsp;&nbsp; Are you sure you want to delete this FAQ?&nbsp;&nbsp;</p>
                     <p>&nbsp;&nbsp;&nbsp;{{faq.question}}</p>
-                    <form action='' method='POST'>
-                        {% csrf_token %}
-                        <input type="submit" value='Delete' class="btn btn-dark;" style="background-color:#343a40;font-weight: bold;color:white;margin-left: 18%;width:30%">
-                        <div style="display: none;">
-                            <label for='id'>Id</label>
-                            <input type="text" name="id" value={{faq.id}}>
-                        </div>
-                        <button class="btn btn-dark" onclick="closeForm()" style="margin-left: 10%;width:30%"><b>Cancel</b></button>
-                    </form><br>
+                    <div>
+                        <form action='' method='POST'>
+                            {% csrf_token %}
+                            <input type="submit" value='Delete' class="btn btn-dark btn-block"
+                                style="background-color:#343a40;font-weight: bold;color:white;width:90%;margin-left: 5%;">
+                            <div style="display: none;">
+                                <label for='id'>Id</label>
+                                <input type="text" name="id" value={{faq.id}}>
+                            </div>
+                        </form>
+                        <button class="btn btn-dark btn-block" onclick="closeForm()" style="width:90%;margin-left: 5%;margin-bottom: 4%;margin-top: 2%;"><b>Cancel</b></button>
+
+                    </div>
+                   
                 </div>
                 {% endif %}
             </div>
@@ -63,10 +70,27 @@
     }
 </script>
 {%  else  %}
-<div class="pl-4" >
-    <h3>For any Further Information Contact {{centre.name}} </h3>
-    <h5> Phone Number : {{centre.phone_no}} </h5>
-    <h5> Email Address : {{centre.email}} </h5>
+<div class="pl-4" style="text-align: center;margin-top:20%;">
+    <h3> For any Further Information Contact- {{centre.name}} </h3><br>
+ <div class="container">
+    <table class="table table-dark table-hover">
+    
+        <tbody>
+            <tr>
+                <td>Phone Number :</td>
+                <td>{{centre.phone_no}}</td>
+    
+            </tr>
+            <tr>
+                <td>Email Address :</td>
+                <td>{{centre.email}}</td>
+    
+            </tr>
+    
+        </tbody>
+    </table>
+ </div>
+    
 </div>
 {% endif %}
 
