added nearby VC page

--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -59,7 +59,7 @@
       <p>{{mess}}</p>
       {% endfor %}
       <h3>Not yet Vaccinated?</h3>
-              <a href="#" style="background-color:#696969;"class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
+      <a href="{% url 'nearbyvc' %}" style="background-color:#696969;"class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
     </div>
     
   </div>
