--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -1,1 +1,40 @@
 {% load static %}
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Nearby Vaccination Centres</h1>
+
+<div id="googleMap" style="width:100%;height:600px;"></div>
+
+<script>
+
+    function myMap() {
+        var mapProp= {
+        center:new google.maps.LatLng(17.387140, 78.491684),
+        zoom:5,
+        };
+
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(17.387140, 78.491684),
+        });
+
+        marker.setMap(map); 
+
+        google.maps.event.addListener(marker,'click',function() {
+            var pos = map.getZoom();
+            map.setZoom(10);
+            map.setCenter(marker.getPosition(new google.maps.LatLng(17.387140, 78.491684))); 
+        }); 
+
+    } 
+
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=myMap"></script>
+
+</body>
+</html> 
