--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -1,9 +1,18 @@
 {% load static %}
-
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>C19 Vaccine</title>
+    
+    <link rel="stylesheet" type="text/css" href="{% static '/css/faq.css' %}">
+    <script src="{% static '/js/faq.js' %}"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
+<body>
 <h1>Nearby Vaccination Centres</h1>
 
 <div id="googleMap" style="width:100%;height:600px;"></div>
