--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -1,14 +1,5 @@
 {% load static %}
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html>
-
-<body>
-
-    <h1 style="text-align: center;"><b>Nearby Vaccination Centres</b></h1>
-
-    <div id="googleMap" style="width:100%;height:600px;"></div>
-=======
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,51 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C19 Vaccine</title>
     
-    <link rel="stylesheet" type="text/css" href="{% static '/css/faq.css' %}">
-    <script src="{% static '/js/faq.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/nearby.css' %}">
+    <script src="{% static '/js/nearby.js' %}"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-<h1>Nearby Vaccination Centres</h1>
->>>>>>> f47f94c8f64295a13e9a35b00f4fca8e5c964de9
+<h1 style="text-align: center;">Nearby Vaccination Centres</h1>
+<div style="width:35%;height:690px;margin-left:20px;float:left;background-color: black;">
+    
+</div>
+<div id="googleMap" style="width:60%;height:690px;float:right;"></div>
 
-    <script>
 
-        function myMap() {
-            var mapProp = {
-                center: new google.maps.LatLng(17.387140, 78.491684),
-                zoom: 5,
-            };
-
-            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-
-            var marker = new google.maps.Marker({
-                position: new google.maps.LatLng(17.387140, 78.491684),
-                 animation: google.maps.Animation.BOUNCE
-            });
-           var infowindow = new google.maps.InfoWindow({
-                content: "Shwetha-Hospitals"
-            });
-
-            google.maps.event.addListener(marker, 'click', function () {
-                infowindow.open(map, marker);
-            });
-
-            marker.setMap(map);
-
-            google.maps.event.addListener(marker, 'click', function () {
-                var pos = map.getZoom();
-                map.setZoom(10);
-                map.setCenter(marker.getPosition(new google.maps.LatLng(17.387140, 78.491684)));
-            });
-
-        }
-
-    </script>
-
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=myMap"></script>
 
 </body>
 
